@@ -19,4 +19,4 @@ requires:
 resources:
   bugtracker: https://github.com/pink-mist/Warnings-Version/issues
   repository: git://github.com/pink-mist/Warnings-Version.git
-version: '0.002002'
+version: '0.002003'
