@@ -4,7 +4,7 @@ license = MIT
 copyright_holder = Andreas Guldstrand
 copyright_year   = 2014
 
-version = 0.002002
+version = 0.002003
 
 [@Basic]
 [@Git]
